<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">Morning!</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_new">New</string>
    <string name="done">DONE</string>
    <string name="name">NAME</string>
    <string name="sound">SOUND</string>
    <string name="repeat">REPEAT</string>
    <string name="title_activity_time_out">TimeOutActivity</string>
    <string name="ringtones">Ringtones</string>
    <string name="snooze">Snooze</string>
    <string name="off">Off</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

</resources>
